# cot-faithcheck

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  methodology.md
examples/: custom_provider.py  quickstart.py  trace.json
src/cot_faithcheck/: __init__.py  __main__.py  answer.py  cli.py  equivalence.py  errors.py  finecot.py  intervention.py  judge.py  parser.py  perturb.py  pipeline.py  prompts.py  report.py  scorer.py  stats.py  types.py
src/cot_faithcheck/clients/: __init__.py  _http.py  anthropic.py  base.py  mock.py  ollama.py  openai_compat.py  tracking.py
tests/: conftest.py  test_answer.py  test_cli.py  test_clients.py  test_conditioning.py  test_criticality.py  test_early_answering.py  test_finecot.py  test_intervention.py  test_judge.py  test_normalization.py  test_p3_features.py  test_parser.py  test_perturb.py  test_pipeline.py  test_report.py  test_scorer.py  test_stats.py
tests/fixtures/: batch.json  blob_trace.json  faithful_math.json  finecot_sample.jsonl  mcq_logiqa.json
